--- a/CourseWork/appsettings.json
+++ b/CourseWork/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=courseworkdb;Trusted_Connection=True;",
-    "HostingDb": "workstation id=CourseWorkDb.mssql.somee.com;packet size=4096;user id=ekruger_SQLLogin_1;pwd=ouu4k6a522;data source=CourseWorkDb.mssql.somee.com;persist security info=False;initial catalog=CourseWorkDb"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=courseworkdb;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
