--- a/CourseWork.Service/CourseWork.Service.csproj
+++ b/CourseWork.Service/CourseWork.Service.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dropbox.Api" Version="6.36.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CourseWork.DAL\CourseWork.DAL.csproj" />
     <ProjectReference Include="..\CourseWork.Domain\CourseWork.Domain.csproj" />
   </ItemGroup>
