--- a/CourseWork.Domain/CourseWork.Domain.csproj
+++ b/CourseWork.Domain/CourseWork.Domain.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.DataAnnotations" Version="2.2.0" />
+    <PackageReference Include="SHA3.Net" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
