--- a/CourseWork/appsettings.json
+++ b/CourseWork/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "LocalDB": "Server=(localdb)\\mssqllocaldb;Database=cwlocaldb;Trusted_Connection=True;",
-    "HostDB": "hostdb"
+    "HostDB": "workstation id=CourseWorkDb.mssql.somee.com;packet size=4096;user id=ekruug3r_SQLLogin_1;pwd=4blcokkg7z;data source=CourseWorkDb.mssql.somee.com;persist security info=False;initial catalog=CourseWorkDb"
   },
   "Logging": {
     "LogLevel": {
