--- a/CourseWork/appsettings.json
+++ b/CourseWork/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "LocalDB": "Server=(localdb)\\mssqllocaldb;Database=cwlocaldb;Trusted_Connection=True;",
+    "LocalDB": "Server=localhost;Database=cwlocaldb;Trusted_Connection=True;",
     "HostDB": "hostdb"
   },
   "Logging": {
