migrate to .net6

--- a/CourseWork/appsettings.json
+++ b/CourseWork/appsettings.json
@@ -10,5 +10,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Dropbox": {
+    "RefreshToken": "refresh_token",
+    "AppKey": "app_key",
+    "AppSecret": "app_secret"
+  }
 }
