--- a/CourseWork.Service/CourseWork.Service.csproj
+++ b/CourseWork.Service/CourseWork.Service.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Dropbox.Api" Version="6.36.0" />
   </ItemGroup>
 
