dockerization - added dockerfile - added docker-compose.yml - database switched to postgres

--- a/CourseWork/appsettings.json
+++ b/CourseWork/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "LocalDB": "Server=localhost;Database=cwlocaldb;Trusted_Connection=True;",
-    "HostDB": "hostdb"
+    "HostDB": "hostdb",
+    "DockerDB": "Host=db;Port=5432;Database=courseworkdb;Username=postgres;Password=12345;"
   },
   "Logging": {
     "LogLevel": {
